Implemented graph utils, test to check paths