@@ -4,6 +4,8 @@ version := "1.0"
 
 scalaVersion := "2.11.7"
 
+javaOptions ++= Seq("-Xms256M", "-Xmx2G", "-XX:MaxPermSize=1024M")
+
 libraryDependencies ++= Seq(
   "org.clulab" %% "processors" % "5.8.0",
   "org.clulab" %% "processors" % "5.8.0" classifier "models",
@@ -12,5 +14,5 @@ libraryDependencies ++= Seq(
   "org.apache.lucene" % "lucene-core" % "5.3.1",
   "org.apache.lucene" % "lucene-analyzers-common" % "5.3.1",
   "org.apache.lucene" % "lucene-queryparser" % "5.3.1",
-  libraryDependencies += "com.assembla.scala-incubator" %% "graph-core" % "1.10.1"
+  "com.assembla.scala-incubator" %% "graph-core" % "1.10.1"
 )
